Update with more synonyms!
Hopefully I'm doing this right!!

--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
       <li><div><img src="graphics/emojis/hatching_chick.png"> :<span class="name" data-alternative-name="animal, bird,egg">hatching_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/chicken.png"> :<span class="name" data-alternative-name="animal, bird">chicken</span>:</div></li>
       <li><div><img src="graphics/emojis/penguin.png"> :<span class="name" data-alternative-name="animal, bird">penguin</span>:</div></li>
-      <li><div><img src="graphics/emojis/turtle.png"> :<span class="name" data-alternative-name="animal">turtle</span>:</div></li>
+      <li><div><img src="graphics/emojis/turtle.png"> :<span class="name" data-alternative-name="animal, tortoise">turtle</span>:</div></li>
       <li><div><img src="graphics/emojis/bug.png"> :<span class="name" data-alternative-name="animal">bug</span>:</div></li>
       <li><div><img src="graphics/emojis/honeybee.png"> :<span class="name" data-alternative-name="animal">honeybee</span>:</div></li>
       <li><div><img src="graphics/emojis/ant.png"> :<span class="name" data-alternative-name="animal">ant</span>:</div></li>
@@ -364,21 +364,21 @@
       <li><div><img src="graphics/emojis/rat.png"> :<span class="name" data-alternative-name="animal">rat</span>:</div></li>
       <li><div><img src="graphics/emojis/water_buffalo.png"> :<span class="name" data-alternative-name="animal">water_buffalo</span>:</div></li>
       <li><div><img src="graphics/emojis/tiger2.png"> :<span class="name" data-alternative-name="animal">tiger2</span>:</div></li>
-      <li><div><img src="graphics/emojis/rabbit2.png"> :<span class="name" data-alternative-name="animal">rabbit2</span>:</div></li>
+      <li><div><img src="graphics/emojis/rabbit2.png"> :<span class="name" data-alternative-name="animal, bunny">rabbit2</span>:</div></li>
       <li><div><img src="graphics/emojis/dragon.png"> :<span class="name" data-alternative-name="animal">dragon</span>:</div></li>
       <li><div><img src="graphics/emojis/goat.png"> :<span class="name" data-alternative-name="animal">goat</span>:</div></li>
-      <li><div><img src="graphics/emojis/rooster.png"> :<span class="name" data-alternative-name="animal">rooster</span>:</div></li>
+      <li><div><img src="graphics/emojis/rooster.png"> :<span class="name" data-alternative-name="animal, chicken">rooster</span>:</div></li>
       <li><div><img src="graphics/emojis/dog2.png"> :<span class="name" data-alternative-name="animal">dog2</span>:</div></li>
       <li><div><img src="graphics/emojis/pig2.png"> :<span class="name" data-alternative-name="animal">pig2</span>:</div></li>
       <li><div><img src="graphics/emojis/mouse2.png"> :<span class="name" data-alternative-name="animal">mouse2</span>:</div></li>
       <li><div><img src="graphics/emojis/ox.png"> :<span class="name" data-alternative-name="animal">ox</span>:</div></li>
       <li><div><img src="graphics/emojis/dragon_face.png"> :<span class="name" data-alternative-name="animal">dragon_face</span>:</div></li>
       <li><div><img src="graphics/emojis/blowfish.png"> :<span class="name" data-alternative-name="animal">blowfish</span>:</div></li>
-      <li><div><img src="graphics/emojis/crocodile.png"> :<span class="name" data-alternative-name="animal">crocodile</span>:</div></li>
+      <li><div><img src="graphics/emojis/crocodile.png"> :<span class="name" data-alternative-name="animal, alligator">crocodile</span>:</div></li>
       <li><div><img src="graphics/emojis/dromedary_camel.png"> :<span class="name" data-alternative-name="animal">dromedary_camel</span>:</div></li>
       <li><div><img src="graphics/emojis/leopard.png"> :<span class="name" data-alternative-name="animal">leopard</span>:</div></li>
-      <li><div><img src="graphics/emojis/cat2.png"> :<span class="name" data-alternative-name="animal">cat2</span>:</div></li>
-      <li><div><img src="graphics/emojis/poodle.png"> :<span class="name" data-alternative-name="animal">poodle</span>:</div></li>
+      <li><div><img src="graphics/emojis/cat2.png"> :<span class="name" data-alternative-name="animal, kitty, kitten">cat2</span>:</div></li>
+      <li><div><img src="graphics/emojis/poodle.png"> :<span class="name" data-alternative-name="animal, dog">poodle</span>:</div></li>
       <li><div><img src="graphics/emojis/paw_prints.png"> :<span class="name" data-alternative-name="animal">paw_prints</span>:</div></li>
       <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name">bouquet</span>:</div></li>
       <li><div><img src="graphics/emojis/cherry_blossom.png"> :<span class="name" data-alternative-name="floral">cherry_blossom</span>:</div></li>
