--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
       <li><div><img src="graphics/emojis/confused.png"> :<span class="name" data-alternative-name= "baffled, puzzled">confused</span>:</div></li>
       <li><div><img src="graphics/emojis/hushed.png"> :<span class="name">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png"> :<span class="name" data-alternative-name="deadpan">expressionless</span>:</div></li>
-      <li><div><img src="graphics/emojis/unamused.png"> :<span class="name">unamused</span>:</div></li>
+      <li><div><img src="graphics/emojis/unamused.png"> :<span class="name" data-alternative-name="sarcasm">unamused</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_smile.png"> :<span class="name" data-alternative-name="happy, relief">sweat_smile</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat.png"> :<span class="name" data-alternative-name="worried, stressed">sweat</span>:</div></li>
       <li><div><img src="graphics/emojis/disappointed_relieved.png"> :<span class="name">disappointed_relieved</span>:</div></li>
