--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
       <li><div><img src="graphics/emojis/heart_eyes.png"> :<span class="name" data-alternative-name="love">heart_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_heart.png"> :<span class="name">kissing_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png"> :<span class="name">kissing_closed_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/flushed.png"> :<span class="name">flushed</span>:</div></li>
+      <li><div><img src="graphics/emojis/flushed.png"> :<span class="name" data-alternative-name="embarassed">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png"> :<span class="name">relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/satisfied.png"> :<span class="name">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png"> :<span class="name">grin</span>:</div></li>
