--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
       <li><div><img src="graphics/emojis/wink.png"> :<span class="name" data-alternative-name="flirt">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png"> :<span class="name">stuck_out_tongue_winking_eye</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png"> :<span class="name">stuck_out_tongue_closed_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/grinning.png"> :<span class="name">grinning</span>:</div></li>
+      <li><div><img src="graphics/emojis/grinning.png"> :<span class="name" data-alternative-name="smiling">grinning</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing.png"> :<span class="name">kissing</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_smiling_eyes.png"> :<span class="name">kissing_smiling_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue.png"> :<span class="name">stuck_out_tongue</span>:</div></li>
