--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@
       <li><div><img src="graphics/emojis/wind_chime.png"> :<span class="name">wind_chime</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_scene.png"> :<span class="name">rice_scene</span>:</div></li>
       <li><div><img src="graphics/emojis/jack_o_lantern.png"> :<span class="name">jack_o_lantern</span>:</div></li>
-      <li><div><img src="graphics/emojis/ghost.png"> :<span class="name">ghost</span>:</div></li>
+      <li><div><img src="graphics/emojis/ghost.png"> :<span class="name" data-alternative-name="Halloween">ghost</span>:</div></li>
       <li><div><img src="graphics/emojis/santa.png"> :<span class="name" data-alternative-name="christmas">santa</span>:</div></li>
       <li><div><img src="graphics/emojis/christmas_tree.png"> :<span class="name">christmas_tree</span>:</div></li>
       <li><div><img src="graphics/emojis/gift.png"> :<span class="name">gift</span>:</div></li>
