--- a/public/index.html
+++ b/public/index.html
@@ -626,7 +626,7 @@
       <li><div><img src="graphics/emojis/briefcase.png"> :<span class="name">briefcase</span>:</div></li>
       <li><div><img src="graphics/emojis/handbag.png"> :<span class="name">handbag</span>:</div></li>
       <li><div><img src="graphics/emojis/pouch.png"> :<span class="name">pouch</span>:</div></li>
-      <li><div><img src="graphics/emojis/purse.png"> :<span class="name">purse</span>:</div></li>
+      <li><div><img src="graphics/emojis/purse.png"> :<span class="name" data-alternative-name="pocketbook">purse</span>:</div></li>
       <li><div><img src="graphics/emojis/eyeglasses.png"> :<span class="name">eyeglasses</span>:</div></li>
       <li><div><img src="graphics/emojis/fishing_pole_and_fish.png"> :<span class="name">fishing_pole_and_fish</span>:</div></li>
       <li><div><img src="graphics/emojis/coffee.png"> :<span class="name">coffee</span>:</div></li>
