--- a/public/index.html
+++ b/public/index.html
@@ -769,7 +769,7 @@
       <li><div><img src="graphics/emojis/ticket.png"> :<span class="name">ticket</span>:</div></li>
       <li><div><img src="graphics/emojis/fuelpump.png"> :<span class="name">fuelpump</span>:</div></li>
       <li><div><img src="graphics/emojis/vertical_traffic_light.png"> :<span class="name">vertical_traffic_light</span>:</div></li>
-      <li><div><img src="graphics/emojis/traffic_light.png"> :<span class="name">traffic_light</span>:</div></li>
+      <li><div><img src="graphics/emojis/traffic_light.png"> :<span class="name" data-alternative-name="stoplight">traffic_light</span>:</div></li>
       <li><div><img src="graphics/emojis/warning.png"> :<span class="name">warning</span>:</div></li>
       <li><div><img src="graphics/emojis/construction.png"> :<span class="name">construction</span>:</div></li>
       <li><div><img src="graphics/emojis/beginner.png"> :<span class="name">beginner</span>:</div></li>
