Added miscellaneous food-related tags

--- a/public/index.html
+++ b/public/index.html
@@ -639,55 +639,55 @@
       <li><div><img src="graphics/emojis/tropical_drink.png"> :<span class="name">tropical_drink</span>:</div></li>
       <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name" data-alternative-name="drink alcohol">wine_glass</span>:</div></li>
       <li><div><img src="graphics/emojis/fork_and_knife.png"> :<span class="name">fork_and_knife</span>:</div></li>
-      <li><div><img src="graphics/emojis/pizza.png"> :<span class="name">pizza</span>:</div></li>
-      <li><div><img src="graphics/emojis/hamburger.png"> :<span class="name">hamburger</span>:</div></li>
-      <li><div><img src="graphics/emojis/fries.png"> :<span class="name">fries</span>:</div></li>
-      <li><div><img src="graphics/emojis/poultry_leg.png"> :<span class="name">poultry_leg</span>:</div></li>
-      <li><div><img src="graphics/emojis/meat_on_bone.png"> :<span class="name">meat_on_bone</span>:</div></li>
-      <li><div><img src="graphics/emojis/spaghetti.png"> :<span class="name">spaghetti</span>:</div></li>
-      <li><div><img src="graphics/emojis/curry.png"> :<span class="name">curry</span>:</div></li>
-      <li><div><img src="graphics/emojis/fried_shrimp.png"> :<span class="name">fried_shrimp</span>:</div></li>
-      <li><div><img src="graphics/emojis/bento.png"> :<span class="name">bento</span>:</div></li>
-      <li><div><img src="graphics/emojis/sushi.png"> :<span class="name" data-alternative-name="japanese">sushi</span>:</div></li>
-      <li><div><img src="graphics/emojis/fish_cake.png"> :<span class="name" data-alternative-name="naruto">fish_cake</span>:</div></li>
-      <li><div><img src="graphics/emojis/rice_ball.png"> :<span class="name">rice_ball</span>:</div></li>
-      <li><div><img src="graphics/emojis/rice_cracker.png"> :<span class="name">rice_cracker</span>:</div></li>
-      <li><div><img src="graphics/emojis/rice.png"> :<span class="name">rice</span>:</div></li>
-      <li><div><img src="graphics/emojis/ramen.png"> :<span class="name">ramen</span>:</div></li>
-      <li><div><img src="graphics/emojis/stew.png"> :<span class="name">stew</span>:</div></li>
-      <li><div><img src="graphics/emojis/oden.png"> :<span class="name">oden</span>:</div></li>
-      <li><div><img src="graphics/emojis/dango.png"> :<span class="name">dango</span>:</div></li>
-      <li><div><img src="graphics/emojis/egg.png"> :<span class="name">egg</span>:</div></li>
-      <li><div><img src="graphics/emojis/bread.png"> :<span class="name">bread</span>:</div></li>
-      <li><div><img src="graphics/emojis/doughnut.png"> :<span class="name">doughnut</span>:</div></li>
-      <li><div><img src="graphics/emojis/custard.png"> :<span class="name">custard</span>:</div></li>
-      <li><div><img src="graphics/emojis/icecream.png"> :<span class="name">icecream</span>:</div></li>
-      <li><div><img src="graphics/emojis/ice_cream.png"> :<span class="name">ice_cream</span>:</div></li>
-      <li><div><img src="graphics/emojis/shaved_ice.png"> :<span class="name">shaved_ice</span>:</div></li>
+      <li><div><img src="graphics/emojis/pizza.png"> :<span class="name" data-alternative-name="food italian dairy">pizza</span>:</div></li>
+      <li><div><img src="graphics/emojis/hamburger.png"> :<span class="name" data-alternative-name="food american meat">hamburger</span>:</div></li>
+      <li><div><img src="graphics/emojis/fries.png"> :<span class="name" data-alternative-name="food american">fries</span>:</div></li>
+      <li><div><img src="graphics/emojis/poultry_leg.png"> :<span class="name" data-alternative-name="food meat">poultry_leg</span>:</div></li>
+      <li><div><img src="graphics/emojis/meat_on_bone.png"> :<span class="name" data-alternative-name="food meat">meat_on_bone</span>:</div></li>
+      <li><div><img src="graphics/emojis/spaghetti.png"> :<span class="name" data-alternative-name="food italian noodles">spaghetti</span>:</div></li>
+      <li><div><img src="graphics/emojis/curry.png"> :<span class="name" data-alternative-name="food indian">curry</span>:</div></li>
+      <li><div><img src="graphics/emojis/fried_shrimp.png"> :<span class="name" data-alternative-name="food seafood">fried_shrimp</span>:</div></li>
+      <li><div><img src="graphics/emojis/bento.png"> :<span class="name" data-alternative-name="food japanese">bento</span>:</div></li>
+      <li><div><img src="graphics/emojis/sushi.png"> :<span class="name" data-alternative-name="food japanese">sushi</span>:</div></li>
+      <li><div><img src="graphics/emojis/fish_cake.png"> :<span class="name" data-alternative-name="food japanese seafood naruto">fish_cake</span>:</div></li>
+      <li><div><img src="graphics/emojis/rice_ball.png"> :<span class="name" data-alternative-name="food">rice_ball</span>:</div></li>
+      <li><div><img src="graphics/emojis/rice_cracker.png"> :<span class="name" data-alternative-name="food">rice_cracker</span>:</div></li>
+      <li><div><img src="graphics/emojis/rice.png"> :<span class="name" data-alternative-name="food">rice</span>:</div></li>
+      <li><div><img src="graphics/emojis/ramen.png"> :<span class="name" data-alternative-name="food noodles">ramen</span>:</div></li>
+      <li><div><img src="graphics/emojis/stew.png"> :<span class="name" data-alternative-name="food">stew</span>:</div></li>
+      <li><div><img src="graphics/emojis/oden.png"> :<span class="name" data-alternative-name="food japanese">oden</span>:</div></li>
+      <li><div><img src="graphics/emojis/dango.png"> :<span class="name" data-alternative-name="food japanese">dango</span>:</div></li>
+      <li><div><img src="graphics/emojis/egg.png"> :<span class="name" data-alternative-name="food">egg</span>:</div></li>
+      <li><div><img src="graphics/emojis/bread.png"> :<span class="name" data-alternative-name="food">bread</span>:</div></li>
+      <li><div><img src="graphics/emojis/doughnut.png"> :<span class="name" data-alternative-name="food dessert">doughnut</span>:</div></li>
+      <li><div><img src="graphics/emojis/custard.png"> :<span class="name" data-alternative-name="food dessert">custard</span>:</div></li>
+      <li><div><img src="graphics/emojis/icecream.png"> :<span class="name" data-alternative-name="food dessert">icecream</span>:</div></li>
+      <li><div><img src="graphics/emojis/ice_cream.png"> :<span class="name" data-alternative-name="food dessert">ice_cream</span>:</div></li>
+      <li><div><img src="graphics/emojis/shaved_ice.png"> :<span class="name" data-alternative-name="food dessert">shaved_ice</span>:</div></li>
       <li><div><img src="graphics/emojis/birthday.png"> :<span class="name">birthday</span>:</div></li>
-      <li><div><img src="graphics/emojis/cake.png"> :<span class="name">cake</span>:</div></li>
-      <li><div><img src="graphics/emojis/cookie.png"> :<span class="name">cookie</span>:</div></li>
-      <li><div><img src="graphics/emojis/chocolate_bar.png"> :<span class="name">chocolate_bar</span>:</div></li>
-      <li><div><img src="graphics/emojis/candy.png"> :<span class="name">candy</span>:</div></li>
-      <li><div><img src="graphics/emojis/lollipop.png"> :<span class="name">lollipop</span>:</div></li>
-      <li><div><img src="graphics/emojis/honey_pot.png"> :<span class="name">honey_pot</span>:</div></li>
-      <li><div><img src="graphics/emojis/apple.png"> :<span class="name">apple</span>:</div></li>
-      <li><div><img src="graphics/emojis/green_apple.png"> :<span class="name">green_apple</span>:</div></li>
-      <li><div><img src="graphics/emojis/tangerine.png"> :<span class="name">tangerine</span>:</div></li>
-      <li><div><img src="graphics/emojis/lemon.png"> :<span class="name">lemon</span>:</div></li>
-      <li><div><img src="graphics/emojis/cherries.png"> :<span class="name">cherries</span>:</div></li>
-      <li><div><img src="graphics/emojis/grapes.png"> :<span class="name">grapes</span>:</div></li>
-      <li><div><img src="graphics/emojis/watermelon.png"> :<span class="name">watermelon</span>:</div></li>
-      <li><div><img src="graphics/emojis/strawberry.png"> :<span class="name">strawberry</span>:</div></li>
-      <li><div><img src="graphics/emojis/peach.png"> :<span class="name">peach</span>:</div></li>
-      <li><div><img src="graphics/emojis/melon.png"> :<span class="name">melon</span>:</div></li>
-      <li><div><img src="graphics/emojis/banana.png"> :<span class="name">banana</span>:</div></li>
-      <li><div><img src="graphics/emojis/pear.png"> :<span class="name">pear</span>:</div></li>
-      <li><div><img src="graphics/emojis/pineapple.png"> :<span class="name">pineapple</span>:</div></li>
-      <li><div><img src="graphics/emojis/sweet_potato.png"> :<span class="name">sweet_potato</span>:</div></li>
-      <li><div><img src="graphics/emojis/eggplant.png"> :<span class="name">eggplant</span>:</div></li>
-      <li><div><img src="graphics/emojis/tomato.png"> :<span class="name">tomato</span>:</div></li>
-      <li><div><img src="graphics/emojis/corn.png"> :<span class="name">corn</span>:</div></li>
+      <li><div><img src="graphics/emojis/cake.png"> :<span class="name" data-alternative-name="food dessert">cake</span>:</div></li>
+      <li><div><img src="graphics/emojis/cookie.png"> :<span class="name" data-alternative-name="food dessert">cookie</span>:</div></li>
+      <li><div><img src="graphics/emojis/chocolate_bar.png"> :<span class="name" data-alternative-name="food dessert">chocolate_bar</span>:</div></li>
+      <li><div><img src="graphics/emojis/candy.png"> :<span class="name" data-alternative-name="food dessert">candy</span>:</div></li>
+      <li><div><img src="graphics/emojis/lollipop.png"> :<span class="name" data-alternative-name="food dessert">lollipop</span>:</div></li>
+      <li><div><img src="graphics/emojis/honey_pot.png"> :<span class="name" data-alternative-name="food dessert">honey_pot</span>:</div></li>
+      <li><div><img src="graphics/emojis/apple.png"> :<span class="name" data-alternative-name="food fruit">apple</span>:</div></li>
+      <li><div><img src="graphics/emojis/green_apple.png"> :<span class="name" data-alternative-name="food fruit">green_apple</span>:</div></li>
+      <li><div><img src="graphics/emojis/tangerine.png"> :<span class="name" data-alternative-name="food fruit">tangerine</span>:</div></li>
+      <li><div><img src="graphics/emojis/lemon.png"> :<span class="name" data-alternative-name="food fruit">lemon</span>:</div></li>
+      <li><div><img src="graphics/emojis/cherries.png"> :<span class="name" data-alternative-name="food fruit">cherries</span>:</div></li>
+      <li><div><img src="graphics/emojis/grapes.png"> :<span class="name" data-alternative-name="food fruit">grapes</span>:</div></li>
+      <li><div><img src="graphics/emojis/watermelon.png"> :<span class="name" data-alternative-name="food fruit">watermelon</span>:</div></li>
+      <li><div><img src="graphics/emojis/strawberry.png"> :<span class="name" data-alternative-name="food fruit">strawberry</span>:</div></li>
+      <li><div><img src="graphics/emojis/peach.png"> :<span class="name" data-alternative-name="food fruit">peach</span>:</div></li>
+      <li><div><img src="graphics/emojis/melon.png"> :<span class="name" data-alternative-name="food fruit">melon</span>:</div></li>
+      <li><div><img src="graphics/emojis/banana.png"> :<span class="name" data-alternative-name="food fruit">banana</span>:</div></li>
+      <li><div><img src="graphics/emojis/pear.png"> :<span class="name" data-alternative-name="food fruit">pear</span>:</div></li>
+      <li><div><img src="graphics/emojis/pineapple.png"> :<span class="name" data-alternative-name="food fruit">pineapple</span>:</div></li>
+      <li><div><img src="graphics/emojis/sweet_potato.png"> :<span class="name" data-alternative-name="food vegetable">sweet_potato</span>:</div></li>
+      <li><div><img src="graphics/emojis/eggplant.png"> :<span class="name" data-alternative-name="food vegetable">eggplant</span>:</div></li>
+      <li><div><img src="graphics/emojis/tomato.png"> :<span class="name" data-alternative-name="food fruit">tomato</span>:</div></li>
+      <li><div><img src="graphics/emojis/corn.png"> :<span class="name" data-alternative-name="food vegetable">corn</span>:</div></li>
     </ul>
     <h2>Places</h2>
     <ul class="places emojis" id="emoji-places">
