--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
       <li><div><img src="graphics/emojis/girl.png"> :<span class="name" data-alternative-name="female">girl</span>:</div></li>
       <li><div><img src="graphics/emojis/woman.png"> :<span class="name" data-alternative-name="female">woman</span>:</div></li>
       <li><div><img src="graphics/emojis/man.png"> :<span class="name" data-alternative-name="guy">man</span>:</div></li>
-      <li><div><img src="graphics/emojis/baby.png"> :<span class="name">baby</span>:</div></li>
+      <li><div><img src="graphics/emojis/baby.png"> :<span class="name" data-alternative-name="infant, child">baby</span>:</div></li>
       <li><div><img src="graphics/emojis/older_woman.png"> :<span class="name">older_woman</span>:</div></li>
       <li><div><img src="graphics/emojis/older_man.png"> :<span class="name">older_man</span>:</div></li>
       <li><div><img src="graphics/emojis/person_with_blond_hair.png"> :<span class="name">person_with_blond_hair</span>:</div></li>
