--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
       <li><div><img src="graphics/emojis/dizzy.png"> :<span class="name">dizzy</span>:</div></li>
       <li><div><img src="graphics/emojis/boom.png"> :<span class="name" data-alternative-name="explosion">boom</span>:</div></li>
       <li><div><img src="graphics/emojis/collision.png"> :<span class="name">collision</span>:</div></li>
-      <li><div><img src="graphics/emojis/anger.png"> :<span class="name" data-alternative-name="angry">anger</span>:</div></li>
+      <li><div><img src="graphics/emojis/anger.png"> :<span class="name" data-alternative-name="angry, mad">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png"> :<span class="name">exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/question.png"> :<span class="name">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png"> :<span class="name">grey_exclamation</span>:</div></li>
