--- a/public/index.html
+++ b/public/index.html
@@ -520,7 +520,7 @@
       <li><div><img src="graphics/emojis/mailbox_with_no_mail.png"> :<span class="name">mailbox_with_no_mail</span>:</div></li>
       <li><div><img src="graphics/emojis/package.png"> :<span class="name" data-alternative-name="box">package</span>:</div></li>
       <li><div><img src="graphics/emojis/door.png"> :<span class="name">door</span>:</div></li>
-      <li><div><img src="graphics/emojis/smoking.png"> :<span class="name">smoking</span>:</div></li>
+      <li><div><img src="graphics/emojis/smoking.png"> :<span class="name" data-alternative-name="smoke">smoking</span>:</div></li>
       <li><div><img src="graphics/emojis/bomb.png"> :<span class="name">bomb</span>:</div></li>
       <li><div><img src="graphics/emojis/gun.png"> :<span class="name">gun</span>:</div></li>
       <li><div><img src="graphics/emojis/hocho.png"> :<span class="name">hocho</span>:</div></li>
