--- a/public/index.html
+++ b/public/index.html
@@ -257,8 +257,8 @@
       <li><div><img src="graphics/emojis/woman.png"> :<span class="name" data-alternative-name="female">woman</span>:</div></li>
       <li><div><img src="graphics/emojis/man.png"> :<span class="name" data-alternative-name="guy">man</span>:</div></li>
       <li><div><img src="graphics/emojis/baby.png"> :<span class="name">baby</span>:</div></li>
-      <li><div><img src="graphics/emojis/older_woman.png"> :<span class="name">older_woman</span>:</div></li>
-      <li><div><img src="graphics/emojis/older_man.png"> :<span class="name">older_man</span>:</div></li>
+      <li><div><img src="graphics/emojis/older_woman.png"> :<span class="name" data-alternative-name="grandma, grandmother">older_woman</span>:</div></li>
+      <li><div><img src="graphics/emojis/older_man.png"> :<span class="name" data-alternative-name="grandpa, grandfather">older_man</span>:</div></li>
       <li><div><img src="graphics/emojis/person_with_blond_hair.png"> :<span class="name">person_with_blond_hair</span>:</div></li>
       <li><div><img src="graphics/emojis/man_with_gua_pi_mao.png"> :<span class="name">man_with_gua_pi_mao</span>:</div></li>
       <li><div><img src="graphics/emojis/man_with_turban.png"> :<span class="name">man_with_turban</span>:</div></li>
