--- a/public/index.html
+++ b/public/index.html
@@ -489,7 +489,7 @@
       <li><div><img src="graphics/emojis/high_brightness.png"> :<span class="name">high_brightness</span>:</div></li>
       <li><div><img src="graphics/emojis/low_brightness.png"> :<span class="name">low_brightness</span>:</div></li>
       <li><div><img src="graphics/emojis/electric_plug.png"> :<span class="name">electric_plug</span>:</div></li>
-      <li><div><img src="graphics/emojis/battery.png"> :<span class="name">battery</span>:</div></li>
+      <li><div><img src="graphics/emojis/battery.png"> :<span class="name" data-alternative-name="power">battery</span>:</div></li>
       <li><div><img src="graphics/emojis/calling.png"> :<span class="name">calling</span>:</div></li>
       <li><div><img src="graphics/emojis/email.png"> :<span class="name">email</span>:</div></li>
       <li><div><img src="graphics/emojis/mailbox.png"> :<span class="name">mailbox</span>:</div></li>
